<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tvTotalItemCarrinhoAdapter"
            app:layout_constraintTop_toTopOf="@+id/tvTotalItemCarrinhoAdapter">

            <TextView
                android:id="@+id/tvQuantidadeDeProdutoCarrinhoAdapater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="end"
                android:hint="@string/hint_quantidade"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvNomeProdutoCarrinhoAdapter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvNomeProdutoCarrinhoAdapter" />

            <TextView
                android:id="@+id/tvNomeProdutoCarrinhoAdapter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/hint_nome_produto"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imvFotoProdutoCarrinhoAdapter"
                app:layout_constraintTop_toTopOf="@+id/imvFotoProdutoCarrinhoAdapter" />

            <ImageView
                android:id="@+id/imvFotoProdutoCarrinhoAdapter"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/contentDescription_nome_produto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_carrinho_de_compras" />

            <TextView
                android:id="@+id/tvTotalItemCarrinhoAdapter"
                android:layout_width="173dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="56dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="56dp"
                android:gravity="center"
                android:hint="R$ 0,00"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/imvFotoProdutoCarrinhoAdapter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imvFotoProdutoCarrinhoAdapter" />

            <ProgressBar
                android:id="@+id/pb_foto_carrinho"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imvFotoProdutoCarrinhoAdapter"
                app:layout_constraintEnd_toEndOf="@+id/imvFotoProdutoCarrinhoAdapter"
                app:layout_constraintStart_toStartOf="@+id/imvFotoProdutoCarrinhoAdapter"
                app:layout_constraintTop_toTopOf="@+id/imvFotoProdutoCarrinhoAdapter" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>