<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="6dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvNomeUserAdapter"
                android:layout_width="256dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/nome_salesman_adapter"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/tvSobrenomeUserAdapter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/pb_foto_cliente_adapter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvEmailUserAdapter"
                android:layout_width="112dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="8343943483"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.558"
                app:layout_constraintStart_toEndOf="@+id/pb_foto_cliente_adapter"
                app:layout_constraintTop_toTopOf="@+id/imvFotoClienteAdapter" />



            <TextView
                android:id="@+id/tvCodClienteAdapter3"
                android:layout_width="67dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/tvCodSalesmanAdapter"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toEndOf="@+id/pb_foto_cliente_adapter"
                app:layout_constraintTop_toTopOf="@+id/imvFotoClienteAdapter" />

            <TextView
                android:id="@+id/tvCodigoUserAdapter"
                android:layout_width="113dp"
                android:layout_height="27dp"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="8343943483"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.638"
                app:layout_constraintStart_toEndOf="@+id/pb_foto_cliente_adapter"
                app:layout_constraintTop_toTopOf="@+id/imvFotoClienteAdapter" />

            <TextView
                android:id="@+id/tvSobrenomeUserAdapter"
                android:layout_width="79dp"
                android:layout_height="26dp"
                android:layout_gravity="start"
                android:layout_marginBottom="10dp"
                android:hint="@string/tvCpfSalesmanAdapter"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvCodigoUserAdapter"
                app:layout_constraintStart_toEndOf="@+id/imvFotoClienteAdapter"
                app:layout_constraintTop_toBottomOf="@+id/tvNomeSalesmanAdapter" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>